# mezze

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md
include/mezze/: mezze.hpp
scripts/: mezze.sh
src/: mezze.cpp
test/: CMakeLists.txt  mezze.test.cpp
